// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeader Style tests should render with chevron down when row clicked 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #666;
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.875rem;
  line-height: 1.25rem;
  vertical-align: middle;
  padding: 12px 16px 12px 24px;
  padding: 8px 16px 8px 24px;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  padding: calc(12px - 1px) calc(24px - 1px);
  background-color: transparent;
  border-color: transparent;
  color: #3063E9;
  padding-left: 0;
  padding-right: 0;
  position: relative;
  overflow: hidden;
  padding: calc(12px - 1px);
}

.circuit-1:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1:hover {
  color: #234BC3;
  background-color: transparent;
  border-color: transparent;
}

.circuit-1:active,
.circuit-1[aria-expanded='true'],
.circuit-1[aria-pressed='true'] {
  color: #1A368E;
  background-color: transparent;
  border-color: transparent;
}

.circuit-2 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-5 {
  margin: -6px 0 -6px -6px;
}

<th
  class="circuit-0"
  scope="col"
>
  <button
    aria-label="toggle-row"
    class="circuit-1"
    style="padding: 0px;"
    title="expand"
  >
    <span
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="circuit-4"
    >
      <svg
        class="circuit-5"
        data-testid="toggle-cheveron"
        fill="none"
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 15c-.265 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 7 10a1 1 0 0 1 1-1c.266 0 .52.104.71.29L12 12.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .265-.104.52-.29.71l-4 4c-.19.186-.445.29-.71.29z"
          fill="currentColor"
        />
      </svg>
      <span
        class="circuit-3"
      >
        expand
      </span>
    </span>
  </button>
  Foo
</th>
`;

exports[`TableHeader Style tests should render with chevron right when row closed 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #666;
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.875rem;
  line-height: 1.25rem;
  vertical-align: middle;
  padding: 12px 16px 12px 24px;
  padding: 8px 16px 8px 24px;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  padding: calc(12px - 1px) calc(24px - 1px);
  background-color: transparent;
  border-color: transparent;
  color: #3063E9;
  padding-left: 0;
  padding-right: 0;
  position: relative;
  overflow: hidden;
  padding: calc(12px - 1px);
}

.circuit-1:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1:hover {
  color: #234BC3;
  background-color: transparent;
  border-color: transparent;
}

.circuit-1:active,
.circuit-1[aria-expanded='true'],
.circuit-1[aria-pressed='true'] {
  color: #1A368E;
  background-color: transparent;
  border-color: transparent;
}

.circuit-2 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-5 {
  margin: -6px 0 -6px -6px;
}

<th
  class="circuit-0"
  scope="col"
>
  <button
    aria-label="toggle-row"
    class="circuit-1"
    style="padding: 0px;"
    title="expand"
  >
    <span
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="circuit-4"
    >
      <svg
        class="circuit-5"
        data-testid="toggle-cheveron"
        fill="none"
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 12c0 .265-.104.52-.29.71l-4 4c-.19.186-.445.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L12.58 12 9.29 8.71A1.013 1.013 0 0 1 9 8a1 1 0 0 1 1-1c.265 0 .52.104.71.29l4 4c.186.19.29.445.29.71z"
          fill="currentColor"
        />
      </svg>
      <span
        class="circuit-3"
      >
        expand
      </span>
    </span>
  </button>
  Foo
</th>
`;

exports[`TableHeader Style tests should render with condensed styles 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-subtle);
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.875rem;
  line-height: 1.25rem;
  vertical-align: middle;
  padding: 12px 16px 12px 24px;
  padding: 8px 16px 8px 24px;
}

<th
  class="circuit-0"
  scope="col"
>
  Foo
</th>
`;

exports[`TableHeader Style tests should render with default styles 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-subtle);
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  white-space: nowrap;
}

<th
  class="circuit-0"
  scope="col"
>
  Foo
</th>
`;

exports[`TableHeader Style tests should render with hovered styles 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  background-color: var(--cui-bg-normal-hovered);
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-subtle);
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  white-space: nowrap;
}

<th
  class="circuit-0"
  scope="col"
>
  Foo
</th>
`;

exports[`TableHeader Style tests should render with row styles 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
}

<th
  class="circuit-0"
  scope="row"
>
  Foo
</th>
`;

exports[`TableHeader Style tests should render with sortable styles 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-subtle);
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-0:focus-within::after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus-within::after::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus-within,
.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-accent-hovered);
}

.circuit-0:focus-within>button,
.circuit-0:hover>button {
  opacity: 1;
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-accent-pressed);
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 36px;
  width: 24px;
  position: absolute;
  left: 0;
  top: 50%;
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  color: var(--cui-fg-accent);
  border: 0;
  background: none;
  outline: 0;
  padding: 2px 4px;
  margin: 0;
  cursor: pointer;
}

.circuit-1:focus {
  opacity: 1;
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2 {
  margin: -2px 0;
}

.circuit-4 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<th
  aria-label="Sort in ascending order"
  aria-sort="none"
  class="circuit-0"
  scope="col"
>
  <button
    class="circuit-1"
    role="button"
    title="Sort in ascending order"
  >
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <span
      class="circuit-4"
    >
      Sort in ascending order
    </span>
  </button>
  Foo
</th>
`;

exports[`TableHeader Style tests sortable + sorted should render with sortable + sorted ascending styles 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-subtle);
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-0:focus-within::after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus-within::after::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus-within,
.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-accent-hovered);
}

.circuit-0:focus-within>button,
.circuit-0:hover>button {
  opacity: 1;
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-accent-pressed);
}

.circuit-0>button {
  opacity: 1;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 36px;
  width: 24px;
  position: absolute;
  left: 0;
  top: 50%;
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  color: var(--cui-fg-accent);
  border: 0;
  background: none;
  outline: 0;
  padding: 2px 4px;
  margin: 0;
  cursor: pointer;
}

.circuit-1:focus {
  opacity: 1;
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2 {
  margin: -2px 0;
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<th
  aria-label="Sort in descending order"
  aria-sort="ascending"
  class="circuit-0"
  scope="col"
>
  <button
    class="circuit-1"
    role="button"
    title="Sort in descending order"
  >
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <span
      class="circuit-3"
    >
      Sort in descending order
    </span>
  </button>
  Foo
</th>
`;

exports[`TableHeader Style tests sortable + sorted should render with sortable + sorted descending styles 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-subtle);
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-0:focus-within::after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus-within::after::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus-within,
.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-accent-hovered);
}

.circuit-0:focus-within>button,
.circuit-0:hover>button {
  opacity: 1;
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-accent-pressed);
}

.circuit-0>button {
  opacity: 1;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 36px;
  width: 24px;
  position: absolute;
  left: 0;
  top: 50%;
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  color: var(--cui-fg-accent);
  border: 0;
  background: none;
  outline: 0;
  padding: 2px 4px;
  margin: 0;
  cursor: pointer;
}

.circuit-1:focus {
  opacity: 1;
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2 {
  margin: -2px 0;
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<th
  aria-label="Sort in ascending order"
  aria-sort="descending"
  class="circuit-0"
  scope="col"
>
  <button
    class="circuit-1"
    role="button"
    title="Sort in ascending order"
  >
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
    <span
      class="circuit-3"
    >
      Sort in ascending order
    </span>
  </button>
  Foo
</th>
`;
